--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 	<h1>Arpan Gupta</h1>
-	<img src="me.jpg" height="200px" width="180px" style="border-radius: 80%; float: left;">
+	<a href="education_page_portfolio.html"><img src="me.jpg" height="200px" width="180px" style="border-radius: 80%; float: left;"></a>
 	<div class="navbar">
 		<nav>
 			<div class="menuitems">
